Added final classes