@@ -1,7 +1,6 @@
 package com.mphasis.interview;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 import com.mphasis.interview.common.Employee;
 import com.mphasis.interview.common.CommonUtils;
@@ -9,7 +8,7 @@ import com.mphasis.interview.common.CommonUtils;
 public class BasicStreams {
 
     public static void main(String args[]) {
-	List<Employee> filteredList = CommonUtils.getEmployeesList().stream().limit(2).collect(Collectors.toList());
+	List<Employee> filteredList = CommonUtils.getEmployeesList().stream().limit(2).toList();
 	filteredList.forEach(System.out::println);
     }
 
